<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/missing_content"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/help" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/missing_content"
        android:cropToPadding="false"
        android:padding="20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/quit" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/missing_content"
        android:padding="20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/play"
        android:layout_marginLeft="40dp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="40dp"
        android:background="@color/colorAccent"
        android:gravity="center|start"
        android:paddingLeft="20sp"
        android:text="@string/btn_play"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="40dp"
        android:background="@color/colorAccent"
        android:gravity="center|start"
        android:padding="20dp"
        android:text="@string/btn_help"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="40dp" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorAccent"
        android:gravity="center|start"
        android:padding="20dp"
        android:text="@string/btn_quit"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="@+id/imageButton4" />

</androidx.constraintlayout.widget.ConstraintLayout>